--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ html, body{
   font-family: 'Reenie Beanie';
   height: 100%;
   width: 100%;
-  background: #DDCBE5;
+  background: #fff;
   background-size: cover;
   padding: 0;
   margin: 0;
